--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,50 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.start_btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-110%);
+}
+
+.stop_btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(10%);
+}
+
+.btn {
+  display: inline-flex;
+  font-size: 20px;
+  padding: 10px;
+  box-shadow: 10px 10px 14px -3px rgba(181,172,181,1);
+}
+
+.flatpickr-input {
+  margin-right: 50px;
+  padding: 10px;
+  font-size: 20px;
+  box-shadow: 10px 10px 14px -3px rgba(181,172,181,1);
+
+}
+
+.timer_container {
+  display: flex;
+ justify-content: baseline;
+  gap: 50px;
+  flex-wrap: wrap;
+
+  padding-top: 50px;
+  font-size: 25px;
+}
+
+.form {
+  font-size: 20px;
+}
+
+.form input {
+  padding: 10px;
+}
